make email send work

--- a/views/layouts/default.pug
+++ b/views/layouts/default.pug
@@ -108,7 +108,7 @@ html(lang="en")
                     td(bgcolor="#ffffff", align="center", style="padding: 20px 30px 60px 30px;")
                       table(border="0", cellspacing="0", cellpadding="0")
                         tr
-                          td(align="center", style="border-radius: 3px;", bgcolor="#FFCB61")
+                          td(align="center", style="border-radius: 3px;", bgcolor="#FF6561")
                             block copyButton
           //if (gte mso 9)|(IE)
       block support
