create reset password email

--- a/views/index.pug
+++ b/views/index.pug
@@ -5,3 +5,5 @@ block content
   ul
     li: a(href="v/confirm-email") Confirm Email - View
     li: a(href=`s/confirm-email/${process.env.UID}`) Confirm Email - Send
+    li: a(href="v/reset-password") Reset Password - View
+    li: a(href=`s/reset-password/${process.env.UID}`) Reset Password - Send
