add welcome and confirm email

--- a/views/index.pug
+++ b/views/index.pug
@@ -7,3 +7,5 @@ block content
     li: a(href=`s/confirm-email/${process.env.UID}`) Confirm Email - Send
     li: a(href="v/reset-password") Reset Password - View
     li: a(href=`s/reset-password/${process.env.UID}`) Reset Password - Send
+    li: a(href="v/welcome") Welcome - View
+    li: a(href=`s/welcome/${process.env.UID}`) Welcome - Send
