--- a/views/layouts/default.pug
+++ b/views/layouts/default.pug
@@ -81,7 +81,7 @@ html(lang="en")
             tr
               td(align="center", valign="top", style="padding: 40px 10px 40px 10px;")
                 a(href= `${process.env.URL}`, target="_blank")
-                  img(alt="Logo", src= `${process.env.URL}images/logo__text__white.png`, width="64", style="display: block; width: 96px; max-width: 96px; min-width: 96px; font-family: 'Lato', Helvetica, Arial, sans-serif; color: #ffffff; font-size: 18px;", border="0")
+                  img(alt="Logo", src= `${process.env.URL}images/logo__text__white.png`, width="64", style="display: block; width: 128px; max-width: 128px; min-width: 128px; font-family: 'Lato', Helvetica, Arial, sans-serif; color: #ffffff; font-size: 18px;", border="0")
           //if (gte mso 9)|(IE)
       tr
         td(bgcolor= color, align="center", style="padding: 0px 10px 0px 10px;")
@@ -115,6 +115,7 @@ html(lang="en")
                         tr
                           td(align="center", style="border-radius: 3px;", bgcolor= color)
                             block copyButton
+            block moreCopy
           //if (gte mso 9)|(IE)
       block support
         tr
