--- a/views/emails/welcome-and-confirm/html.pug
+++ b/views/emails/welcome-and-confirm/html.pug
@@ -25,4 +25,4 @@ block moreCopy
   tr
     td(bgcolor="#ffffff", align="left", style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px; border-radius: 0px 0px 4px 4px;")
       p(style="margin: 0;")
-        a(href= link, target="_blank", style="color: #FFA73B;")= link
+        a(href= link, target="_blank", style="color: #FFA73B; overflow-wrap: break-word; word-wrap: break-word; word-break: break-all;")= link
