--- a/views/index.pug
+++ b/views/index.pug
@@ -9,3 +9,7 @@ block content
     li: a(href=`s/reset-password/${process.env.UID}`) Reset Password - Send
     li: a(href="v/welcome") Welcome - View
     li: a(href=`s/welcome/${process.env.UID}`) Welcome - Send
+    li: a(href="v/application-submitted") Application Submitted - View
+    li: a(href=`v/application-submitted/${process.env.UID}`) Application Submitted - Send
+    li: a(href="v/application-received") Application Received - View
+    li: a(href=`v/application-received/${process.env.UID}`) Application Received - Send
