fix routes on index page

--- a/views/index.pug
+++ b/views/index.pug
@@ -10,6 +10,6 @@ block content
     li: a(href="v/welcome") Welcome - View
     li: a(href=`s/welcome/${process.env.UID}`) Welcome - Send
     li: a(href="v/application-submitted") Application Submitted - View
-    li: a(href=`v/application-submitted/${process.env.UID}`) Application Submitted - Send
+    li: a(href=`s/application-submitted/${process.env.UID}`) Application Submitted - Send
     li: a(href="v/application-received") Application Received - View
-    li: a(href=`v/application-received/${process.env.UID}`) Application Received - Send
+    li: a(href=`s/application-received/${process.env.UID}`) Application Received - Send
