--- a/views/layouts/default.pug
+++ b/views/layouts/default.pug
@@ -80,7 +80,7 @@ html(lang="en")
           table(border="0", cellpadding="0", cellspacing="0", width="100%", style="max-width: 600px;")
             tr
               td(align="center", valign="top", style="padding: 40px 10px 40px 10px;")
-                a(href= `${process.env.URL}`, target="_blank")
+                a(href= `${process.env.URL_MAIN}`, target="_blank")
                   img(alt="Logo", src= `${process.env.URL}/images/logo__text__white.png`, width="64", style="display: block; width: 128px; max-width: 128px; min-width: 128px; font-family: 'Lato', Helvetica, Arial, sans-serif; color: #ffffff; font-size: 18px;", border="0")
           //if (gte mso 9)|(IE)
       tr
