--- a/views/index.pug
+++ b/views/index.pug
@@ -13,3 +13,5 @@ block content
     li: a(href=`s/application-submitted/${process.env.UID}`) Application Submitted - Send
     li: a(href="v/application-received") Application Received - View
     li: a(href=`s/application-received/${process.env.UID}`) Application Received - Send
+    li: a(href="v/signup") Signup - View
+    li: a(href=`s/signup/${process.env.UID}`) Signup - Send
