--- a/views/layouts/default.pug
+++ b/views/layouts/default.pug
@@ -130,7 +130,7 @@ html(lang="en")
                 td(bgcolor= colorLite, align="center", style="padding: 30px 30px 30px 30px; border-radius: 4px 4px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;")
                   h2(style="font-size: 20px; font-weight: 400; color: #333333; margin: 0;") Need more help?
                   p(style="margin: 0;")
-                    a(href= `${process.env.URL_MAIN}contact`, target="_blank", style="color: #333; font-weight: bold;") We’re here, ready to talk
+                    a(href= `${process.env.URL_MAIN}/contact`, target="_blank", style="color: #333; font-weight: bold;") We’re here, ready to talk
             //if (gte mso 9)|(IE)
       tr
         td(bgcolor="#f4f4f4", align="center", style="padding: 0px 10px 0px 10px;")
@@ -145,9 +145,9 @@ html(lang="en")
                 p(style="margin: 0;")
                   a(href= `${process.env.URL_MAIN}`, target="_blank", style="color: #111111; font-weight: 700;") Home
                   |  -
-                  a(href= `${process.env.URL_MAIN}about`, target="_blank", style="color: #111111; font-weight: 700;") About Us
+                  a(href= `${process.env.URL_MAIN}/about`, target="_blank", style="color: #111111; font-weight: 700;") About Us
                   |  -
-                  a(href= `${process.env.URL_MAIN}contact`, target="_blank", style="color: #111111; font-weight: 700;") Contact
+                  a(href= `${process.env.URL_MAIN}/contact`, target="_blank", style="color: #111111; font-weight: 700;") Contact
             // UNSUBSCRIBE
             tr
               td(bgcolor="#f4f4f4", align="left", style="padding: 0px 30px 30px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 14px; font-weight: 400; line-height: 18px;")
