--- a/views/index.pug
+++ b/views/index.pug
@@ -15,3 +15,5 @@ block content
     li: a(href=`s/application-received/${process.env.UID}`) Application Received - Send
     li: a(href="v/signup") Signup - View
     li: a(href=`s/signup/${process.env.UID}`) Signup - Send
+    li: a(href="v/accept-application") Accept Application - View
+    li: a(href=`s/accept-application/${process.env.UID}`) Accept Application - Send
