create rejection email

--- a/views/index.pug
+++ b/views/index.pug
@@ -17,3 +17,4 @@ block content
     li: a(href=`s/signup/${process.env.UID}`) Signup - Send
     li: a(href="v/accept-application") Accept Application - View
     li: a(href=`s/accept-application/${process.env.UID}`) Accept Application - Send
+    li: a(href="v/reject-application") Reject Application - View
