--- a/views/layouts/default.pug
+++ b/views/layouts/default.pug
@@ -108,13 +108,14 @@ html(lang="en")
             // BULLETPROOF BUTTON
             tr
               td(bgcolor="#ffffff", align="left")
-                table(width="100%", border="0", cellspacing="0", cellpadding="0")
-                  tr
-                    td(bgcolor="#ffffff", align="center", style="padding: 20px 30px 60px 30px;")
-                      table(border="0", cellspacing="0", cellpadding="0")
-                        tr
-                          td(align="center", style="border-radius: 3px;", bgcolor= color)
-                            block copyButton
+                block copyButtonBlock
+                  table(width="100%", border="0", cellspacing="0", cellpadding="0")
+                    tr
+                      td(bgcolor="#ffffff", align="center", style="padding: 20px 30px 60px 30px;")
+                        table(border="0", cellspacing="0", cellpadding="0")
+                          tr
+                            td(align="center", style="border-radius: 3px;", bgcolor= color)
+                              block copyButton
             block moreCopy
           //if (gte mso 9)|(IE)
       block support
