create share story email template

--- a/views/index.pug
+++ b/views/index.pug
@@ -18,3 +18,4 @@ block content
     li: a(href="v/accept-application") Accept Application - View
     li: a(href=`s/accept-application/${process.env.UID}`) Accept Application - Send
     li: a(href="v/reject-application") Reject Application - View
+    li: a(href="v/share-story") Share Story - View
