--- a/views/layouts/default.pug
+++ b/views/layouts/default.pug
@@ -129,7 +129,7 @@ html(lang="en")
               // HEADLINE
               tr
                 td(bgcolor= colorLite, align="center", style="padding: 30px 30px 30px 30px; border-radius: 4px 4px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;")
-                  h2(style="font-size: 20px; font-weight: 400; color: #333333; margin: 0;") Need more help?
+                  h2(style="font-size: 20px; font-weight: 400; color: #333333; margin: 0;") Need some help?
                   p(style="margin: 0;")
                     a(href= `${process.env.URL_MAIN}/contact`, target="_blank", style="color: #333; font-weight: bold;") We’re here, ready to talk
             //if (gte mso 9)|(IE)
